# controllers/borrowRequestsController.js
@@ -1,15 +1,9 @@
 const pool = require('../db');
 
 exports.getBookings = (req, res) => {
-  const 
-  {
-    id,
-    role
-  } = req.body;
-  const value = id;
-  if ( role != 'admin' )  {
-    const sql = 'SELECT * FROM borrow_requests WHERE borrower_id = ? ORDER BY created_at DESC';
-    pool.query(sql, value, (err, rows) => {
+  const id = req.query.id;
+  const sql = 'SELECT * FROM borrow_requests WHERE borrower_id = ? ORDER BY created_at DESC';
+    pool.query(sql, id, (err, rows) => {
         if (err) {
           console.error('Query error:', err);
           res.status(500).send('Database error');
@@ -17,18 +11,6 @@ exports.getBookings = (req, res) => {
           res.json(rows);
         }
       });
-  }
-  else {
-    const sql = 'SELECT * FROM borrow_requests ORDER BY created_at DESC';
-    pool.query(sql, value, (err, rows) => {
-        if (err) {
-          console.error('Query error:', err);
-          res.status(500).send('Database error');
-        } else {
-          res.json(rows);
-        }
-      });
-  }
 }
 
 exports.getBookingssByid = (req, res) => {
@@ -46,7 +28,7 @@ exports.getBookingssByid = (req, res) => {
 
 
 exports.postBookings = (req, res) => {
-    const 
+    var 
     {
       classroom_id,
       borrow_type,
@@ -56,13 +38,25 @@ exports.postBookings = (req, res) => {
       event_name,
       people_count,
       teacher_name,
-      reason
+      reason,
+      teacher_department, 
+      teacher_phone, 
+      teacher_email,
+      borrower_department, 
+      borrower_phone, 
+      borrower_email
     } = req.body;
 
 
     if ( !classroom_id || !borrow_type || !start_date || !start_time || !end_time || !event_name ) {
       return res.status(400).json({ error: '缺少必要欄位' });
     }
+    if ( !teacher_department )  teacher_department = "NaN";
+    if ( !teacher_phone )  teacher_phone = "NaN";
+    if ( !teacher_email )  teacher_email = "NaN";
+    if ( !borrower_department )  borrower_department = "NaN";
+    if ( !borrower_phone )  borrower_phone = "NaN";
+    if ( !borrower_email )  borrower_email = "NaN";
 
     // SQL INSERT
     const sql = `
@@ -93,13 +87,13 @@ exports.postBookings = (req, res) => {
       teacher_name, 
       reason, 
       '審核中', 
-      null,
-      null,
-      null,
-      null,
-      null,
-      null,
-      null,
+      "審核中",
+      teacher_department, 
+      teacher_phone, 
+      teacher_email,
+      borrower_department, 
+      borrower_phone, 
+      borrower_email
     ]
     
     pool.query(sql,values,(err, result) => {
@@ -111,7 +105,7 @@ exports.postBookings = (req, res) => {
     });
 }
 
-exports.postCancelBookings = (req, res) => {
+exports.putCancelBookings = (req, res) => {
     const sql = `
     UPDATE borrow_requests
     SET status = '已取消'
@@ -124,6 +118,23 @@ exports.postCancelBookings = (req, res) => {
         return res.status(500).json({ error: '資料庫錯誤' });
       }
       res.json({ message: '已取消', request_id: result.insertId });
+      //console.log(result);
+    });
+}
+
+exports.putReturnBookings = (req, res) => {
+    const sql = `
+    UPDATE borrow_requests
+    SET status = '已歸還'
+    WHERE request_id = ?;`
+   
+    const value = req.params.id;
+    pool.query(sql,value,(err, result) => {
+      if (err) {
+        console.error('變更資料失敗:', err);
+        return res.status(500).json({ error: '資料庫錯誤' });
+      }
+      res.json({ message: '已歸還', request_id: result.insertId });
       //console.log(result);
     });
 }
